@@ -26,59 +26,87 @@ along with the GNU MP Library.  If not, see http://www.gnu.org/licenses/.  */
 
 #include "gmp.h"
 #include "gmp-impl.h"
-#include "longlong.h"
 
 #ifndef MULMOD_BNM1_THRESHOLD
 #define MULMOD_BNM1_THRESHOLD 16
 #endif
 
-/* Inputs and outputs are n limbs, computation is mod B^n - 1, and
-   values are semi-normalised; zero is represented as either 0 or B^n - 1.
-   Needs 2n limbs at rp. */
+/* Inputs are {ap,an} and {bp,bn}; output is {rp,rn}, computation is
+   mod B^rn - 1, and values are semi-normalised; zero is represented
+   as either 0 or B^n - 1.  Needs 2rn limbs at rp. */
 static void
-mpn_bc_mulmod_bnm1 (mp_ptr rp, mp_srcptr ap, mp_srcptr bp, mp_size_t n)
+mpn_bc_mulmod_bnm1 (mp_ptr rp, mp_size_t rn, mp_srcptr ap, mp_size_t an, mp_srcptr bp, mp_size_t bn)
 {
   mp_limb_t cy;
-  mpn_mul_n (rp, ap, bp, n);
-  cy = mpn_add_n (rp, rp, rp+n, n);
-  /* If cy == 1, then the value of rp is at most B^n - 2, so there can
-   * be no overflow when adding in the carry. */
-  MPN_INCR_U (rp, n, cy);
+
+  ASSERT (0 < an && an <= rn);
+  ASSERT (0 < bn && bn <= rn);
+  ASSERT (0 < rn);
+
+  mpn_mul (rp, ap, an, bp, bn);
+  an += bn;
+  if( UNLIKELY(an <= rn) )
+    MPN_ZERO (rp + an, rn - an);
+  else {
+    cy = mpn_add (rp, rp, rn, rp + rn, an - rn);
+    /* If cy == 1, then the value of rp is at most B^rn - 2, so there can
+     * be no overflow when adding in the carry. */
+    MPN_INCR_U (rp, rn, cy);
+  }
 }
 
 
-/* Inputs and outputs are n + 1, in semi-normalised representation,
-   computation is mod B^n + 1. Needs 2n + 2 limbs at rp. Output is
-   normalised. */
+/* Inputs are {ap,an} and {bp,bn}; output is {rp,rn+1}, in
+   semi-normalised representation, computation is mod B^rn + 1. Needs
+   2rn + 2 limbs at rp. Output is normalised. */
 static void
-mpn_bc_mulmod_bnp1 (mp_ptr rp, mp_srcptr ap, mp_srcptr bp, mp_size_t n)
+mpn_bc_mulmod_bnp1 (mp_ptr rp, mp_size_t rn, mp_srcptr ap, mp_size_t an, mp_srcptr bp, mp_size_t bn)
 {
   mp_limb_t cy;
-  mpn_mul_n (rp, ap, bp, n+1);
-  ASSERT(rp[2*n+1] == 0);
-  cy = mpn_sub_n (rp, rp, rp+n, n);
-  rp[n] = 0;
-  MPN_INCR_U (rp, n+1, cy + rp[2*n]);
+
+  ASSERT (0 < an && an <= rn + 1);
+  ASSERT (0 < bn && bn <= rn + 1);
+  ASSERT (0 < rn);
+
+  mpn_mul (rp, ap, an, bp, bn);
+  an += bn;
+  ASSERT( an <= 2*rn + 1 || rp[2*rn+1] == 0);
+  ASSERT( an <= 2*rn || rp[2*rn] < GMP_NUMB_MAX);
+  if( UNLIKELY(an < rn) )
+    MPN_ZERO (rp + an, rn + 1 - an);
+  else {
+    if( LIKELY(an > 2*rn) )
+      cy = rp[2*rn] + mpn_sub_n (rp, rp, rp+rn, rn);
+    else
+      cy = mpn_sub (rp, rp, rn, rp+rn, an-rn);
+    rp[rn] = 0;
+    MPN_INCR_U (rp, rn+1, cy );
+  }
 }
 
 
-/* Scratch need: 3*n + 4 + need for recursive call. This gives
+/* Computes {rp,rn} <- {ap,an}*{bp,bn} Mod(B^rn-1)
+ * Scratch need: rn + 2 + (need for recursive call OR rn + 2). This gives
  *
- * S(n) <= 3*n + 4 + S(n/2) <= 6n + c log n
+ * S(n) <= rn + 2 + MAX (rn + 2, S(n/2)) <= 2n + 2 log2 n + 2
  */
 
 void
-mpn_mulmod_bnm1 (mp_ptr rp, mp_srcptr ap, mp_srcptr bp, mp_size_t size, mp_ptr tp)
+mpn_mulmod_bnm1 (mp_ptr rp, mp_size_t rn, mp_srcptr ap, mp_size_t an, mp_srcptr bp, mp_size_t bn, mp_ptr tp)
 {
-  if ((size & 1) != 0 || BELOW_THRESHOLD (size, MULMOD_BNM1_THRESHOLD))
-    mpn_bc_mulmod_bnm1 (rp, ap, bp, size);
+  ASSERT (0 < an && an <= rn);
+  ASSERT (0 < bn && bn <= rn);
+  ASSERT (0 < rn);
+
+  if ((rn & 1) != 0 || BELOW_THRESHOLD (rn, MULMOD_BNM1_THRESHOLD))
+    mpn_bc_mulmod_bnm1 (rp, rn, ap, an, bp, bn);
   else
     {
       mp_size_t n;
       mp_limb_t cy;
       mp_limb_t hi;
 
-      n = size >> 1;
+      n = rn >> 1;
 
       /* Compute xm = a*b mod (B^n - 1), xp = a*b mod (B^n + 1)
 	 and crt together as
@@ -91,37 +119,81 @@ mpn_mulmod_bnm1 (mp_ptr rp, mp_srcptr ap, mp_srcptr bp, mp_size_t size, mp_ptr t
 #define b0 bp
 #define b1 (bp + n)
 
-#define am1 tp		/* n */
-#define bm1 (tp + n)	/* n */
-#define ap1 (tp + 2*n)	/* n + 1 */
-#define bp1 (tp + 3*n+1)	/* n + 1 */
-#define xp (tp + 4*n + 2)	/* 2n + 2 */
-#define scratch_out (tp + 6*n + 4)
+#define xp  tp	/* 2n + 2 */
+      /* am1  maybe in {xp, n} */
+      /* bm1  maybe in {xp + n, n} */
+#define so (tp + 2*n + 2)
+      /* ap1  maybe in {so, n + 1} */
+      /* bp1  maybe in {so + n + 1, n + 1} */
 
-      cy = mpn_add_n (am1, a0, a1, n);
-      MPN_INCR_U (am1, n, cy);
-      cy = mpn_sub_n (ap1, a0, a1, n);
-      ap1[n] = 0;
-      MPN_INCR_U (ap1, n + 1, cy);
+      {
+	mp_srcptr am1, bm1;
+	mp_size_t anm, bnm;
 
-      cy = mpn_add_n (bm1, b0, b1, n);
-      MPN_INCR_U (bm1, n, cy);
-      cy = mpn_sub_n (bp1, b0, b1, n);
-      bp1[n] = 0;
-      MPN_INCR_U (bp1, n + 1 , cy);
-
-      mpn_mulmod_bnm1 (rp, am1, bm1, n, scratch_out);
-
-      if (BELOW_THRESHOLD (n, MUL_FFT_MODF_THRESHOLD))
-	mpn_bc_mulmod_bnp1 (xp, ap1, bp1, n);
-      else
-	{
-	  int k;
-	  k = mpn_fft_best_k (n, 0);
-	  ASSERT_ALWAYS (n == mpn_fft_next_size (n, k));
-
-	  xp[n] = mpn_mul_fft (xp, n, ap1, n + ap1[n], bp1 + bp1[n], n, k);
+	if( an > n ) {
+	  cy = mpn_add (xp, a0, n, a1, an - n);
+	  MPN_INCR_U (xp, n, cy);
+	  am1 = xp;
+	  anm = n;
+	} else {
+	  am1 = a0;
+	  anm = an;
 	}
+
+	if( bn > n ) {
+	  bm1 = xp + n;
+	  cy = mpn_add (xp + n, b0, n, b1, bn - n);
+	  MPN_INCR_U (xp + n, n, cy);
+	  bnm = n;
+	} else {
+	  bm1 = b0;
+	  bnm = bn;
+	}
+
+	mpn_mulmod_bnm1 (rp, n, am1, anm, bm1, bnm, so);
+      }
+
+      {
+	int       k;
+	mp_srcptr ap1, bp1;
+	mp_size_t anp, bnp;
+
+	if( an > n ) {
+	  cy = mpn_sub (so, a0, n, a1, an - n);
+	  so[n] = 0;
+	  MPN_INCR_U (so, n + 1, cy);
+	  ap1 = so;
+	  anp = n + ap1[n];
+	} else {
+	  ap1 = a0;
+	  anp = an;
+	}
+
+	if( bn > n ) {
+	  bp1 = so + n + 1;
+	  cy = mpn_sub (so + n + 1, b0, n, b1, bn - n);
+	  so[n+1+n] = 0;
+	  MPN_INCR_U (so + n + 1, n + 1, cy);
+	  bnp = n + bp1[n];
+	} else {
+	  bp1 = b0;
+	  bnp = bn;
+	}
+
+	if (BELOW_THRESHOLD (n, MUL_FFT_MODF_THRESHOLD))
+	  k=0;
+	else
+	  {
+	    int mask;
+	    k = mpn_fft_best_k (n, 0);
+	    mask = (1<<k) -1;
+	    while (n & mask) {k--; mask >>=1;};
+	  }
+	if (k >= FFT_FIRST_K)
+	  xp[n] = mpn_mul_fft (xp, n, ap1, anp, bp1, bnp, k);
+	else
+	  mpn_bc_mulmod_bnp1 (xp, n, ap1, anp, bp1, bnp);
+      }
 
       /* xp = xm - xp mod (B^n + 1). Assumes normalised
 	 representation. Puts high bit in hi. */
@@ -154,12 +226,8 @@ mpn_mulmod_bnm1 (mp_ptr rp, mp_srcptr ap, mp_srcptr bp, mp_size_t size, mp_ptr t
 #undef a1
 #undef b0
 #undef b1
-#undef am1
-#undef bm1
-#undef ap1
-#undef bp1
 #undef xp
-#undef scratch_out
+#undef so
     }
 }
 
